--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "devDependencies": {
     "parcel-bundler": "^1.9.7",
+    "ts-node": "^7.0.1",
     "typescript": "^3.0.1"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "koa": "^2.5.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-logger": "^3.2.0",
+    "koa-route": "^3.2.0",
+    "koa2-cors": "^2.0.6"
   },
   "scripts": {
-  	"start": "parcel ./index.html"
+    "start": "parcel index.html",
+    "serve": "ts-node server/index.ts"
   }
 }
